# AsyncPixel

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/: auth.py  task.py  user.py
app/core/: db.py
app/models/: task.py  user.py
app/schemas/: task.py  user.py
app/services/: user.py
